--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <script src="js/webStorage.js"></script>
   <script src="js/localStorageAdapter.js"></script>
-  <title>benchmark</title>
+  <title>webStorage Adapters Benchmark</title>
 </head>
 <body class="newUser">
 <section id="main">
