--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <br />50 operations will be performed with each adapter.
   </p>
   <div>
-    <h3>Web Sql Adapter</h3><span id="websql-time-span"></span>
+    <h3>WebSQL Adapter</h3><span id="websql-time-span"></span>
     <div id="websql-benchmark-pgbar" class="progrecss" data-progrecss="0"></div>
   </div>
 </section>
@@ -35,8 +35,8 @@
 </section>
 <section id="benchmark">
   <div>
-    <h3>localStorage Adapter</h3>
-    <div id="local-benchmark-pgbar" class="progrecss" data-progrecss="0"></div>
+    <h3>IndexedDB Adapter</h3><span id="indexeddb-time-span">Not implemented yet.</span>
+    <div id="indexeddb-benchmark-pgbar" class="progrecss" data-progrecss="0"></div>
   </div>
 </section>
 <script src="js/benchmark.js"></script>
