updated js libs in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/progrecss.css" />
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet" type="text/css"/>
 
-  <script src="js/webStorage.js"></script>
+  <script src="js/webSQLAdapter.js"></script>
   <script src="js/localStorageAdapter.js"></script>
   <title>webStorage Adapters Benchmark</title>
 </head>
