Added indexedDBAdapter benchmark

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <script src="js/webSQLAdapter.js"></script>
   <script src="js/localStorageAdapter.js"></script>
+  <script src="js/indexedDBAdapter.js"></script>
   <title>webStorage Adapters Benchmark</title>
 </head>
 <body class="newUser">
@@ -35,7 +36,7 @@
 </section>
 <section id="benchmark">
   <div>
-    <h3>IndexedDB Adapter</h3><span id="indexeddb-time-span">Not implemented yet.</span>
+    <h3>IndexedDB Adapter</h3><span id="indexeddb-time-span"></span>
     <div id="indexeddb-benchmark-pgbar" class="progrecss" data-progrecss="0"></div>
   </div>
 </section>
